<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimingAirPlane</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
	<string name="text_current">当前设定</string>
	<string name="text_airplane">飞行</string>
	<string name="text_cancel">取消</string>
	<string name="text_reset">重新设置</string>
	<string name="button_airplane">设定飞行</string>
	<string name="button_cancel">设定取消</string>
	<string name="button_on">开启</string>
	<string name="button_off">关闭</string>
	<string name="time_default">00:00</string>
	<string name="text_time_delay">距离生效还有</string>
	<string name="text_day">天</string>
	<string name="text_hour">小时</string>
	<string name="text_minute">分钟</string>
	
	
</resources>